Complete implement user http API
