# ms/hq/app/plaid_types.go
@@ -1,12 +1,16 @@
 package app
 
-import plaid "github.com/plaid/plaid-go/v3/plaid"
+import (
+	"github.com/hellohq/hqservice/api/openapi/model"
+	plaid "github.com/plaid/plaid-go/v3/plaid"
+)
 
 type GetInfoResp struct {
 	AccessToken string `json:"access_token"`
 	ItemId      string `json:"item_id"`
 	Products    string `json:"products"`
 }
+
 type GetAccessTokenReq struct {
 	PublicToken string `form:"public_token"`
 }
@@ -15,8 +19,21 @@ type GetAccessTokenResp struct {
 	ItemId      string `json:"item_id"`
 }
 
+func (v *GetAccessTokenResp) ToOAIResp() *model.GetAccessTokenResp {
+	return &model.GetAccessTokenResp{
+		AccessToken: &v.AccessToken,
+		ItemID:      &v.ItemId,
+	}
+}
+
 type LinkTokenCreateResp struct {
 	LinkToken string `json:"link_token"`
+}
+
+func (v *LinkTokenCreateResp) ToOAIResp() *model.LinkTokenCreateResp {
+	return &model.LinkTokenCreateResp{
+		LinkToken: &v.LinkToken,
+	}
 }
 
 type GetAuthAccountResp struct {
